--- a/src/main/resources/templates/interfaceAdmin.html
+++ b/src/main/resources/templates/interfaceAdmin.html
@@ -1,149 +1,7 @@
-<!-- <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Staff Admin</title>
-    <script type="text/javascript"></script>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-      }
-
-      table {
-        width: 80%;
-        margin: 20px auto;
-        border-collapse: collapse;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-        background-color: #fff;
-      }
-
-      table caption {
-        font-weight: bold;
-        padding: 10px;
-        background-color: #333;
-        color: #fff;
-      }
-
-      table thead {
-        background-color: #333;
-        color: #fff;
-      }
-
-      table th,
-      table td {
-        padding: 8px;
-        text-align: left;
-      }
-
-      table tr:nth-child(even) {
-        background-color: #f2f2f2;
-      }
-
-      div {
-        margin: 20px auto;
-      }
-
-      button {
-        padding: 10px 20px;
-        font-size: 16px;
-        background-color: #333;
-        color: #fff;
-        border: none;
-        cursor: pointer;
-        margin: 10px;
-        transition: background-color 0.3s;
-      }
-
-      button:hover {
-        background-color: #555;
-      }
-    </style>
-  </head>
-  <body>
-    <div>
-      <table>
-        <tr>
-          <th>Name</th>
-          <th>Prenom</th>
-          <th>Age</th>
-          <th>Matricule</th>
-          <th>Niveau</th>
-        </tr>
-        <tr th:each="etudiant : ${etudiant}">
-          <td th:text="${etudiant.name}">Name</td>
-          <td th:text="${etudiant.Prenom}">Prenom</td>
-          <td th:text="${etudiant.age}">Age</td>
-          <td th:text="${etudiant.Matricule}">Matricule</td>
-          <td th:text="${etudiant.Niveau}">Niveau</td>
-        </tr>
-      </table>
-    </div>
-    <div>
-      <table>
-        <tr>
-          <th>Name</th>
-          <th>Prenom</th>
-          <th>specialite</th>
-          <th>Matricule</th>
-        </tr>
-        <tr th:each="enseignant : ${enseignant}">
-          <td th:text="${enseignant.name}">Name</td>
-          <td th:text="${enseignant.Prenom}">Prenom</td>
-          <td th:text="${enseignant.specialite}">specialite</td>
-          <td th:text="${enseignant.Matricule}">Matricule</td>
-        </tr>
-      </table>
-    </div>
-    <div>
-      <table>
-        <tr>
-          <th>Name</th>
-          <th>Prenom</th>
-          <th>fonction</th>
-          <th>Matricule</th>
-        </tr>
-        <tr th:each="CadreAdministratif : ${CadreAdministratif}">
-          <td th:text="${CadreAdministratif.name}">Name</td>
-          <td th:text="${CadreAdministratif.Prenom}">Prenom</td>
-          <td th:text="${CadreAdministratif.fonction}">fonction</td>
-          <td th:text="${CadreAdministratif.Matricule}">Matricule</td>
-        </tr>
-      </table>
-    </div>
-  </body>
-</html> -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <!-- Inside your HTML file -->
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js">
-      function deleteStudent(id) {
-        console.log('Button clicked. Student ID:', id);
-        if (confirm("Are you sure you want to delete this student?")) {
-          // Make an AJAX request to the Spring Boot endpoint for deleting students
-          $.ajax({
-            url: "/deleteEtudiant/" + id, // Adjust the URL as per your Spring Boot configuration
-            type: "DELETE",
-            success: function (data) {
-              if (data === "success") {
-                // Reload the page when the deletion is successful
-                location.reload();
-              }
-              // Handle success, such as updating the UI
-              // You may want to reload the student list or remove the row from the table
-            },
-            error: function () {
-              alert("An error occurred while deleting the student.");
-              // Handle errors, if any
-              // You can display an error message or take appropriate action
-            },
-          });
-        }
-      }
-    </script> -->
 
     <title>Gestion Tekup</title>
     <style>
@@ -278,7 +136,7 @@
 
       function saveChanges(row) {
         console.log("succceeesss", row);
-        // Extract the updated data from the row and send it to the server for saving
+
         var name = row.cells[0].innerText;
         var prenom = row.cells[1].innerText;
         var age = row.cells[2].innerText;
@@ -286,9 +144,8 @@
         var niveau = row.cells[4].innerText;
         var absences = row.cells[5].innerText;
 
-        // Make an AJAX request to save changes to the server
         $.ajax({
-          url: "/updateStudent", // Adjust the URL as per your Spring Boot configuration
+          url: "/updateStudent",
           type: "PUT",
           data: {
             name: name,
@@ -309,7 +166,7 @@
       function deleteStudent(studentId) {
         if (confirm("Are you sure you want to delete this student?")) {
           $.ajax({
-            url: "/deleteEtudiant/" + studentId, // Adjust the URL as per your Spring Boot configuration
+            url: "/deleteEtudiant/" + studentId,
             type: "DELETE",
             success: function (data) {
               if (data === "success") {
@@ -364,13 +221,11 @@
         var fields = row.querySelectorAll("[contenteditable]");
 
         if (button.innerText === "Edit") {
-          // Enter edit mode
           fields.forEach(function (field) {
             field.setAttribute("contenteditable", "true");
           });
           button.innerText = "Save";
         } else {
-          // Exit edit mode and save changes
           fields.forEach(function (field) {
             field.setAttribute("contenteditable", "false");
           });
@@ -381,15 +236,14 @@
 
       function saveChangesTeacher(row) {
         console.log("succceeesss", row);
-        // Extract the updated data from the row and send it to the server for saving
+
         var name = row.cells[0].innerText;
         var prenom = row.cells[1].innerText;
         var specialite = row.cells[2].innerText;
         var matricule = row.cells[3].innerText;
 
-        // Make an AJAX request to save changes to the server
         $.ajax({
-          url: "/updateTeacher", // Adjust the URL as per your Spring Boot configuration
+          url: "/updateTeacher",
           type: "PUT",
           data: {
             name: name,
@@ -397,9 +251,7 @@
             specialite: specialite,
             matricule: matricule,
           },
-          success: function (data) {
-            // Handle success, if needed
-          },
+          success: function (data) {},
           error: function () {
             alert("An error occurred while saving changes.");
           },
@@ -443,8 +295,6 @@
             <button onclick="toggleEditStaff(this)">Modifier</button>
           </td>
         </tr>
-
-        <!-- Add more admin staff data rows as needed -->
       </tbody>
     </table>
     <div>
@@ -460,7 +310,6 @@
     </div>
     <script>
       function openAddStudentDialog() {
-        // Show the add student dialog
         var addStudentDialog = document.getElementById("add-student-dialog");
         var dialogBackground = document.getElementById(
           "add-student-dialog-background"
@@ -468,27 +317,22 @@
         addStudentDialog.style.display = "block";
         dialogBackground.style.display = "block";
 
-        // Reset the form when the dialog opens
         var addStudentForm = document.getElementById("add-student-form");
         addStudentForm.reset();
 
-        // Attach a form submission handler
         addStudentForm.onsubmit = function (e) {
-          e.preventDefault(); // Prevent the default form submission
+          e.preventDefault();
 
-          // Gather form data
           var formData = new FormData(addStudentForm);
 
-          // Make an AJAX request to add a new student
           $.ajax({
-            url: "/addStudent", // Adjust the URL as per your Spring Boot configuration
+            url: "/addStudent",
             type: "POST",
             data: formData,
             processData: false,
             contentType: false,
             success: function (data) {
               if (data === "success") {
-                // Close the dialog and reload the page
                 addStudentDialog.style.display = "none";
                 dialogBackground.style.display = "none";
                 location.reload();
@@ -521,7 +365,7 @@
       function deleteEnseignant(teacherId) {
         if (confirm("Are you sure you want to delete this teacher?")) {
           $.ajax({
-            url: "/deleteEnseignant/" + teacherId, // Adjust the URL as per your Spring Boot configuration
+            url: "/deleteEnseignant/" + teacherId,
             type: "DELETE",
             success: function (data) {
               if (data === "success") {
@@ -535,7 +379,6 @@
         }
       }
       function openAddTeacherDialog() {
-        // Show the add student dialog
         var addTeacherDialog = document.getElementById("add-teacher-dialog");
         var dialogBackground = document.getElementById(
           "add-teacher-dialog-background"
@@ -543,27 +386,23 @@
         addTeacherDialog.style.display = "block";
         dialogBackground.style.display = "block";
 
-        // Reset the form when the dialog opens
         var addTeacherForm = document.getElementById("add-teacher-form");
         addTeacherForm.reset();
 
-        // Attach a form submission handler
         addTeacherForm.onsubmit = function (e) {
-          e.preventDefault(); // Prevent the default form submission
+          e.preventDefault();
 
           // Gather form data
           var formData = new FormData(addTeacherForm);
 
-          // Make an AJAX request to add a new student
           $.ajax({
-            url: "/addTeacher", // Adjust the URL as per your Spring Boot configuration
+            url: "/addTeacher",
             type: "POST",
             data: formData,
             processData: false,
             contentType: false,
             success: function (data) {
               if (data === "success") {
-                // Close the dialog and reload the page
                 addTeacherDialog.style.display = "none";
                 dialogBackground.style.display = "none";
                 location.reload();
@@ -632,7 +471,7 @@
       function deleteStaff(staffId) {
         if (confirm("Are you sure you want to delete this staff?")) {
           $.ajax({
-            url: "/deleteCadre/" + staffId, // Adjust the URL as per your Spring Boot configuration
+            url: "/deleteCadre/" + staffId,
             type: "DELETE",
             success: function (data) {
               if (data === "success") {
@@ -650,13 +489,11 @@
         var fields = row.querySelectorAll("[contenteditable]");
 
         if (button.innerText === "Edit") {
-          // Enter edit mode
           fields.forEach(function (field) {
             field.setAttribute("contenteditable", "true");
           });
           button.innerText = "Save";
         } else {
-          // Exit edit mode and save changes
           fields.forEach(function (field) {
             field.setAttribute("contenteditable", "false");
           });
@@ -667,15 +504,14 @@
 
       function saveChangesStaff(row) {
         console.log("succceeesss", row);
-        // Extract the updated data from the row and send it to the server for saving
+
         var name = row.cells[0].innerText;
         var prenom = row.cells[1].innerText;
         var fonction = row.cells[2].innerText;
         var matricule = row.cells[3].innerText;
 
-        // Make an AJAX request to save changes to the server
         $.ajax({
-          url: "/updateStaff", // Adjust the URL as per your Spring Boot configuration
+          url: "/updateStaff",
           type: "PUT",
           data: {
             name: name,
@@ -683,9 +519,7 @@
             fonction: fonction,
             matricule: matricule,
           },
-          success: function (data) {
-            // Handle success, if needed
-          },
+          success: function (data) {},
           error: function () {
             alert("An error occurred while saving changes.");
           },
